welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: method posFinale has return statement; needs result type
  return true} else {avance();gauche();false}} else {
  ^SnakeBuggle:6: error: method posFinale has return statement; needs result type
if (getDirection() == Direction.OUEST) {droite(); if (estFaceMur()) {return true} else {avance();droite();false}} } } else {false} }
                                                                     ^